added logic to generate random rgb colors

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <h1>The Great <span id="display"></span> RGB Color Game</h1>
 
-    <div>
+    <div id="stripe">
+        <button id="new">New Color</button>        
         <span id="message"></span>
     </div>
 
