added logic to make reset button textContent change from New Colors to Play Again? if game is won

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>The Great <span id="display"></span> RGB Color Game</h1>
 
     <div id="stripe">
-        <button id="new">New Color</button>        
+        <button id="new">New Colors</button>
         <span id="message"></span>
     </div>
 
