--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" type="text/css" media="screen" href="colorGame.css" />
 </head>
 <body>
-    <h1>The Great <span id="display"></span> RGB Color Game</h1>
+    <h1>The Great
+        <br>
+        <span id="display"></span>
+        <br>
+        RGB Color Game</h1>
 
     <div id="stripe">
         <button id="new">New Colors</button>
